Add helper methods for approximate comparisons to ProfileData
(cherry picked from commit 1c37f51477cb8d7d7c5a7a1a47d0cdcf7154880e)