@@ -175,8 +175,8 @@ public final class IfNode extends ControlSplitNode implements Simplifiable, LIRL
 
     public void setTrueSuccessorProbability(BranchProbabilityData profileData) {
         double prob = profileData.getDesignatedSuccessorProbability();
-        assert prob >= 0 - ProfileData.EPSILON && prob <= 1 + ProfileData.EPSILON : "Probability out of bounds: " + prob;
-        double trueSuccessorProbability = Math.clamp(prob, 0.0, 1.0);
+        assert ProfileData.isApproximatelyInRange(prob, 0.0, 1.0) : "Probability out of bounds: " + prob;
+        double trueSuccessorProbability = Math.min(1.0, Math.max(0.0, prob));
         this.profileData = profileData.copy(trueSuccessorProbability);
     }
 
